// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simpleScatter 1`] = `
{
  "annotation": {},
  "chartType": "scatter",
  "config": {
    "scatter": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "crosshairLine": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "lineColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "scatter": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "crosshairLine": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "lineColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "2019-A",
      "__Dim_Color__": "2019-A",
      "__Dim_Detail__": "2019-A",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 10,
      "__MeaYValue__": 10,
      "__OriginalData__": {
        "__Dim_ColorId__": "2019-A",
        "__Dim_Color__": "2019-A",
        "__Dim_Detail__": "2019-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "goalProfit": 10,
      "profit": 10,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2019-A",
      "__Dim_Color__": "2019-A",
      "__Dim_Detail__": "2019-A",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 10,
      "__MeaYValue__": 100,
      "__OriginalData__": {
        "__Dim_ColorId__": "2019-A",
        "__Dim_Color__": "2019-A",
        "__Dim_Detail__": "2019-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "goalProfit": 10,
      "sales": 100,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2019-A",
      "__Dim_Color__": "2019-A",
      "__Dim_Detail__": "2019-A",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaXValue__": 10,
      "__MeaYValue__": 1,
      "__OriginalData__": {
        "__Dim_ColorId__": "2019-A",
        "__Dim_Color__": "2019-A",
        "__Dim_Detail__": "2019-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "goalProfit": 10,
      "leftCount": 1,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2019-A",
      "__Dim_Color__": "2019-A",
      "__Dim_Detail__": "2019-A",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaXValue__": 10,
      "__MeaYValue__": 100,
      "__OriginalData__": {
        "__Dim_ColorId__": "2019-A",
        "__Dim_Color__": "2019-A",
        "__Dim_Detail__": "2019-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "goalProfit": 10,
      "salesCount": 100,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2020-A",
      "__Dim_Color__": "2020-A",
      "__Dim_Detail__": "2020-A",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 30,
      "__MeaYValue__": 30,
      "__OriginalData__": {
        "__Dim_ColorId__": "2020-A",
        "__Dim_Color__": "2020-A",
        "__Dim_Detail__": "2020-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "goalProfit": 30,
      "profit": 30,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2020-A",
      "__Dim_Color__": "2020-A",
      "__Dim_Detail__": "2020-A",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 30,
      "__MeaYValue__": 320,
      "__OriginalData__": {
        "__Dim_ColorId__": "2020-A",
        "__Dim_Color__": "2020-A",
        "__Dim_Detail__": "2020-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "goalProfit": 30,
      "sales": 320,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2020-A",
      "__Dim_Color__": "2020-A",
      "__Dim_Detail__": "2020-A",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaXValue__": 30,
      "__MeaYValue__": 2,
      "__OriginalData__": {
        "__Dim_ColorId__": "2020-A",
        "__Dim_Color__": "2020-A",
        "__Dim_Detail__": "2020-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "goalProfit": 30,
      "leftCount": 2,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2020-A",
      "__Dim_Color__": "2020-A",
      "__Dim_Detail__": "2020-A",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaXValue__": 30,
      "__MeaYValue__": 200,
      "__OriginalData__": {
        "__Dim_ColorId__": "2020-A",
        "__Dim_Color__": "2020-A",
        "__Dim_Detail__": "2020-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "goalProfit": 30,
      "salesCount": 200,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2021-A",
      "__Dim_Color__": "2021-A",
      "__Dim_Detail__": "2021-A",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 30,
      "__MeaYValue__": 30,
      "__OriginalData__": {
        "__Dim_ColorId__": "2021-A",
        "__Dim_Color__": "2021-A",
        "__Dim_Detail__": "2021-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "goalProfit": 30,
      "profit": 30,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2021-A",
      "__Dim_Color__": "2021-A",
      "__Dim_Detail__": "2021-A",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 30,
      "__MeaYValue__": 300,
      "__OriginalData__": {
        "__Dim_ColorId__": "2021-A",
        "__Dim_Color__": "2021-A",
        "__Dim_Detail__": "2021-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "goalProfit": 30,
      "sales": 300,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2021-A",
      "__Dim_Color__": "2021-A",
      "__Dim_Detail__": "2021-A",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaXValue__": 30,
      "__MeaYValue__": 3,
      "__OriginalData__": {
        "__Dim_ColorId__": "2021-A",
        "__Dim_Color__": "2021-A",
        "__Dim_Detail__": "2021-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "goalProfit": 30,
      "leftCount": 3,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2021-A",
      "__Dim_Color__": "2021-A",
      "__Dim_Detail__": "2021-A",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaXValue__": 30,
      "__MeaYValue__": 300,
      "__OriginalData__": {
        "__Dim_ColorId__": "2021-A",
        "__Dim_Color__": "2021-A",
        "__Dim_Detail__": "2021-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "goalProfit": 30,
      "salesCount": 300,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2022-A",
      "__Dim_Color__": "2022-A",
      "__Dim_Detail__": "2022-A",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 50,
      "__MeaYValue__": 50,
      "__OriginalData__": {
        "__Dim_ColorId__": "2022-A",
        "__Dim_Color__": "2022-A",
        "__Dim_Detail__": "2022-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "goalProfit": 50,
      "profit": 50,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2022-A",
      "__Dim_Color__": "2022-A",
      "__Dim_Detail__": "2022-A",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 50,
      "__MeaYValue__": 240,
      "__OriginalData__": {
        "__Dim_ColorId__": "2022-A",
        "__Dim_Color__": "2022-A",
        "__Dim_Detail__": "2022-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "goalProfit": 50,
      "sales": 240,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2022-A",
      "__Dim_Color__": "2022-A",
      "__Dim_Detail__": "2022-A",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaXValue__": 50,
      "__MeaYValue__": 4,
      "__OriginalData__": {
        "__Dim_ColorId__": "2022-A",
        "__Dim_Color__": "2022-A",
        "__Dim_Detail__": "2022-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "goalProfit": 50,
      "leftCount": 4,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2022-A",
      "__Dim_Color__": "2022-A",
      "__Dim_Detail__": "2022-A",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaXValue__": 50,
      "__MeaYValue__": 400,
      "__OriginalData__": {
        "__Dim_ColorId__": "2022-A",
        "__Dim_Color__": "2022-A",
        "__Dim_Detail__": "2022-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "goalProfit": 50,
      "salesCount": 400,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2023-A",
      "__Dim_Color__": "2023-A",
      "__Dim_Detail__": "2023-A",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 40,
      "__MeaYValue__": 40,
      "__OriginalData__": {
        "__Dim_ColorId__": "2023-A",
        "__Dim_Color__": "2023-A",
        "__Dim_Detail__": "2023-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "goalProfit": 40,
      "profit": 40,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2023-A",
      "__Dim_Color__": "2023-A",
      "__Dim_Detail__": "2023-A",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 40,
      "__MeaYValue__": 500,
      "__OriginalData__": {
        "__Dim_ColorId__": "2023-A",
        "__Dim_Color__": "2023-A",
        "__Dim_Detail__": "2023-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "goalProfit": 40,
      "sales": 500,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2023-A",
      "__Dim_Color__": "2023-A",
      "__Dim_Detail__": "2023-A",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaXValue__": 40,
      "__MeaYValue__": 5,
      "__OriginalData__": {
        "__Dim_ColorId__": "2023-A",
        "__Dim_Color__": "2023-A",
        "__Dim_Detail__": "2023-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "goalProfit": 40,
      "leftCount": 5,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2023-A",
      "__Dim_Color__": "2023-A",
      "__Dim_Detail__": "2023-A",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaXValue__": 40,
      "__MeaYValue__": 500,
      "__OriginalData__": {
        "__Dim_ColorId__": "2023-A",
        "__Dim_Color__": "2023-A",
        "__Dim_Detail__": "2023-A",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaXValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "goalProfit": 40,
      "salesCount": 500,
      "type": "A",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "colorRange": [
          0,
          1,
        ],
        "foldMap": {
          "goalProfit": "goalProfit",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          10,
          50,
        ],
        "measureValue": "__MeaXValue__",
      },
      "foldInfoList": [
        {
          "colorRange": [
            0,
            1,
          ],
          "foldMap": {
            "goalProfit": "goalProfit",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureRange": [
            10,
            50,
          ],
          "measureValue": "__MeaXValue__",
        },
        {
          "colorRange": [
            0,
            1,
          ],
          "foldMap": {
            "leftCount": "leftCount",
            "profit": "profit",
            "sales": "sales",
            "salesCount": "salesCount",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureRange": [
            1,
            500,
          ],
          "measureValue": "__MeaYValue__",
        },
      ],
      "id": "scatter",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "2019-A": "2019-A",
          "2020-A": "2020-A",
          "2021-A": "2021-A",
          "2022-A": "2022-A",
          "2023-A": "2023-A",
        },
        "colorItems": [
          "2019-A",
          "2020-A",
          "2021-A",
          "2022-A",
          "2023-A",
          "2019-A",
          "2020-A",
          "2021-A",
          "2022-A",
          "2023-A",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "date",
      "id": "date",
    },
    {
      "alias": "type",
      "id": "type",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "date",
      "type",
    ],
    "column": [],
    "detail": [
      "date",
      "type",
    ],
    "label": [],
    "row": [],
    "tooltip": [
      "goalProfit",
      "profit",
      "sales",
      "leftCount",
      "salesCount",
    ],
    "y": [
      "goalProfit",
      "profit",
      "sales",
      "leftCount",
      "salesCount",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "goalProfit",
      "children": [
        {
          "alias": "goalProfit",
          "id": "goalProfit",
        },
      ],
      "id": "0-x",
    },
    {
      "alias": "profit,sales,leftCount,salesCount",
      "children": [
        {
          "alias": "profit",
          "id": "profit",
        },
        {
          "alias": "sales",
          "id": "sales",
        },
        {
          "alias": "leftCount",
          "id": "leftCount",
        },
        {
          "alias": "salesCount",
          "id": "salesCount",
        },
      ],
      "id": "0-y",
    },
  ],
}
`;

exports[`simpleScatter 2`] = `
{
  "animation": true,
  "axes": [
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "right": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "bottom",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "2019-A",
      "2020-A",
      "2021-A",
      "2022-A",
      "2023-A",
      "2019-A",
      "2020-A",
      "2021-A",
      "2022-A",
      "2023-A",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 1,
          "opacity": 1,
          "stroke": "#3641594d",
        },
        "type": "line",
      },
      "visible": true,
    },
    "yField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 1,
          "opacity": 1,
          "stroke": "#3641594d",
        },
        "type": "line",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {},
    "id": "scatter",
    "values": [
      {
        "__Dim_ColorId__": "2019-A",
        "__Dim_Color__": "2019-A",
        "__Dim_Detail__": "2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 10,
        "__MeaYValue__": 10,
        "__OriginalData__": {
          "__Dim_ColorId__": "2019-A",
          "__Dim_Color__": "2019-A",
          "__Dim_Detail__": "2019-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 10,
          "__OriginalData__": {
            "date": "2019",
            "goalProfit": 10,
            "leftCount": 1,
            "profit": 10,
            "sales": 100,
            "salesCount": 100,
            "type": "A",
          },
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "goalProfit": 10,
        "profit": 10,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2019-A",
        "__Dim_Color__": "2019-A",
        "__Dim_Detail__": "2019-A",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 10,
        "__MeaYValue__": 100,
        "__OriginalData__": {
          "__Dim_ColorId__": "2019-A",
          "__Dim_Color__": "2019-A",
          "__Dim_Detail__": "2019-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 10,
          "__OriginalData__": {
            "date": "2019",
            "goalProfit": 10,
            "leftCount": 1,
            "profit": 10,
            "sales": 100,
            "salesCount": 100,
            "type": "A",
          },
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "goalProfit": 10,
        "sales": 100,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2019-A",
        "__Dim_Color__": "2019-A",
        "__Dim_Detail__": "2019-A",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaXValue__": 10,
        "__MeaYValue__": 1,
        "__OriginalData__": {
          "__Dim_ColorId__": "2019-A",
          "__Dim_Color__": "2019-A",
          "__Dim_Detail__": "2019-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 10,
          "__OriginalData__": {
            "date": "2019",
            "goalProfit": 10,
            "leftCount": 1,
            "profit": 10,
            "sales": 100,
            "salesCount": 100,
            "type": "A",
          },
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2019-A",
        "__Dim_Color__": "2019-A",
        "__Dim_Detail__": "2019-A",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaXValue__": 10,
        "__MeaYValue__": 100,
        "__OriginalData__": {
          "__Dim_ColorId__": "2019-A",
          "__Dim_Color__": "2019-A",
          "__Dim_Detail__": "2019-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 10,
          "__OriginalData__": {
            "date": "2019",
            "goalProfit": 10,
            "leftCount": 1,
            "profit": 10,
            "sales": 100,
            "salesCount": 100,
            "type": "A",
          },
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "goalProfit": 10,
        "salesCount": 100,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2020-A",
        "__Dim_Color__": "2020-A",
        "__Dim_Detail__": "2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 30,
        "__MeaYValue__": 30,
        "__OriginalData__": {
          "__Dim_ColorId__": "2020-A",
          "__Dim_Color__": "2020-A",
          "__Dim_Detail__": "2020-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 30,
          "__OriginalData__": {
            "date": "2020",
            "goalProfit": 30,
            "leftCount": 2,
            "profit": 30,
            "sales": 320,
            "salesCount": 200,
            "type": "A",
          },
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "goalProfit": 30,
        "profit": 30,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2020-A",
        "__Dim_Color__": "2020-A",
        "__Dim_Detail__": "2020-A",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 30,
        "__MeaYValue__": 320,
        "__OriginalData__": {
          "__Dim_ColorId__": "2020-A",
          "__Dim_Color__": "2020-A",
          "__Dim_Detail__": "2020-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 30,
          "__OriginalData__": {
            "date": "2020",
            "goalProfit": 30,
            "leftCount": 2,
            "profit": 30,
            "sales": 320,
            "salesCount": 200,
            "type": "A",
          },
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "goalProfit": 30,
        "sales": 320,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2020-A",
        "__Dim_Color__": "2020-A",
        "__Dim_Detail__": "2020-A",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaXValue__": 30,
        "__MeaYValue__": 2,
        "__OriginalData__": {
          "__Dim_ColorId__": "2020-A",
          "__Dim_Color__": "2020-A",
          "__Dim_Detail__": "2020-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 30,
          "__OriginalData__": {
            "date": "2020",
            "goalProfit": 30,
            "leftCount": 2,
            "profit": 30,
            "sales": 320,
            "salesCount": 200,
            "type": "A",
          },
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2020-A",
        "__Dim_Color__": "2020-A",
        "__Dim_Detail__": "2020-A",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaXValue__": 30,
        "__MeaYValue__": 200,
        "__OriginalData__": {
          "__Dim_ColorId__": "2020-A",
          "__Dim_Color__": "2020-A",
          "__Dim_Detail__": "2020-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 30,
          "__OriginalData__": {
            "date": "2020",
            "goalProfit": 30,
            "leftCount": 2,
            "profit": 30,
            "sales": 320,
            "salesCount": 200,
            "type": "A",
          },
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "goalProfit": 30,
        "salesCount": 200,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2021-A",
        "__Dim_Color__": "2021-A",
        "__Dim_Detail__": "2021-A",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 30,
        "__MeaYValue__": 30,
        "__OriginalData__": {
          "__Dim_ColorId__": "2021-A",
          "__Dim_Color__": "2021-A",
          "__Dim_Detail__": "2021-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 30,
          "__OriginalData__": {
            "date": "2021",
            "goalProfit": 30,
            "leftCount": 3,
            "profit": 30,
            "sales": 300,
            "salesCount": 300,
            "type": "A",
          },
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "goalProfit": 30,
        "profit": 30,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2021-A",
        "__Dim_Color__": "2021-A",
        "__Dim_Detail__": "2021-A",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 30,
        "__MeaYValue__": 300,
        "__OriginalData__": {
          "__Dim_ColorId__": "2021-A",
          "__Dim_Color__": "2021-A",
          "__Dim_Detail__": "2021-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 30,
          "__OriginalData__": {
            "date": "2021",
            "goalProfit": 30,
            "leftCount": 3,
            "profit": 30,
            "sales": 300,
            "salesCount": 300,
            "type": "A",
          },
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "goalProfit": 30,
        "sales": 300,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2021-A",
        "__Dim_Color__": "2021-A",
        "__Dim_Detail__": "2021-A",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaXValue__": 30,
        "__MeaYValue__": 3,
        "__OriginalData__": {
          "__Dim_ColorId__": "2021-A",
          "__Dim_Color__": "2021-A",
          "__Dim_Detail__": "2021-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 30,
          "__OriginalData__": {
            "date": "2021",
            "goalProfit": 30,
            "leftCount": 3,
            "profit": 30,
            "sales": 300,
            "salesCount": 300,
            "type": "A",
          },
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2021-A",
        "__Dim_Color__": "2021-A",
        "__Dim_Detail__": "2021-A",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaXValue__": 30,
        "__MeaYValue__": 300,
        "__OriginalData__": {
          "__Dim_ColorId__": "2021-A",
          "__Dim_Color__": "2021-A",
          "__Dim_Detail__": "2021-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 30,
          "__OriginalData__": {
            "date": "2021",
            "goalProfit": 30,
            "leftCount": 3,
            "profit": 30,
            "sales": 300,
            "salesCount": 300,
            "type": "A",
          },
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "goalProfit": 30,
        "salesCount": 300,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2022-A",
        "__Dim_Color__": "2022-A",
        "__Dim_Detail__": "2022-A",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 50,
        "__MeaYValue__": 50,
        "__OriginalData__": {
          "__Dim_ColorId__": "2022-A",
          "__Dim_Color__": "2022-A",
          "__Dim_Detail__": "2022-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 50,
          "__OriginalData__": {
            "date": "2022",
            "goalProfit": 50,
            "leftCount": 4,
            "profit": 50,
            "sales": 240,
            "salesCount": 400,
            "type": "A",
          },
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "goalProfit": 50,
        "profit": 50,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2022-A",
        "__Dim_Color__": "2022-A",
        "__Dim_Detail__": "2022-A",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 50,
        "__MeaYValue__": 240,
        "__OriginalData__": {
          "__Dim_ColorId__": "2022-A",
          "__Dim_Color__": "2022-A",
          "__Dim_Detail__": "2022-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 50,
          "__OriginalData__": {
            "date": "2022",
            "goalProfit": 50,
            "leftCount": 4,
            "profit": 50,
            "sales": 240,
            "salesCount": 400,
            "type": "A",
          },
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "goalProfit": 50,
        "sales": 240,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2022-A",
        "__Dim_Color__": "2022-A",
        "__Dim_Detail__": "2022-A",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaXValue__": 50,
        "__MeaYValue__": 4,
        "__OriginalData__": {
          "__Dim_ColorId__": "2022-A",
          "__Dim_Color__": "2022-A",
          "__Dim_Detail__": "2022-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 50,
          "__OriginalData__": {
            "date": "2022",
            "goalProfit": 50,
            "leftCount": 4,
            "profit": 50,
            "sales": 240,
            "salesCount": 400,
            "type": "A",
          },
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2022-A",
        "__Dim_Color__": "2022-A",
        "__Dim_Detail__": "2022-A",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaXValue__": 50,
        "__MeaYValue__": 400,
        "__OriginalData__": {
          "__Dim_ColorId__": "2022-A",
          "__Dim_Color__": "2022-A",
          "__Dim_Detail__": "2022-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 50,
          "__OriginalData__": {
            "date": "2022",
            "goalProfit": 50,
            "leftCount": 4,
            "profit": 50,
            "sales": 240,
            "salesCount": 400,
            "type": "A",
          },
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "goalProfit": 50,
        "salesCount": 400,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2023-A",
        "__Dim_Color__": "2023-A",
        "__Dim_Detail__": "2023-A",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 40,
        "__MeaYValue__": 40,
        "__OriginalData__": {
          "__Dim_ColorId__": "2023-A",
          "__Dim_Color__": "2023-A",
          "__Dim_Detail__": "2023-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 40,
          "__OriginalData__": {
            "date": "2023",
            "goalProfit": 40,
            "leftCount": 5,
            "profit": 40,
            "sales": 500,
            "salesCount": 500,
            "type": "A",
          },
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "goalProfit": 40,
        "profit": 40,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2023-A",
        "__Dim_Color__": "2023-A",
        "__Dim_Detail__": "2023-A",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 40,
        "__MeaYValue__": 500,
        "__OriginalData__": {
          "__Dim_ColorId__": "2023-A",
          "__Dim_Color__": "2023-A",
          "__Dim_Detail__": "2023-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 40,
          "__OriginalData__": {
            "date": "2023",
            "goalProfit": 40,
            "leftCount": 5,
            "profit": 40,
            "sales": 500,
            "salesCount": 500,
            "type": "A",
          },
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "goalProfit": 40,
        "sales": 500,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2023-A",
        "__Dim_Color__": "2023-A",
        "__Dim_Detail__": "2023-A",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaXValue__": 40,
        "__MeaYValue__": 5,
        "__OriginalData__": {
          "__Dim_ColorId__": "2023-A",
          "__Dim_Color__": "2023-A",
          "__Dim_Detail__": "2023-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 40,
          "__OriginalData__": {
            "date": "2023",
            "goalProfit": 40,
            "leftCount": 5,
            "profit": 40,
            "sales": 500,
            "salesCount": 500,
            "type": "A",
          },
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2023-A",
        "__Dim_Color__": "2023-A",
        "__Dim_Detail__": "2023-A",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaXValue__": 40,
        "__MeaYValue__": 500,
        "__OriginalData__": {
          "__Dim_ColorId__": "2023-A",
          "__Dim_Color__": "2023-A",
          "__Dim_Detail__": "2023-A",
          "__MeaId__": "goalProfit",
          "__MeaName__": "goalProfit",
          "__MeaXValue__": 40,
          "__OriginalData__": {
            "date": "2023",
            "goalProfit": 40,
            "leftCount": 5,
            "profit": 40,
            "sales": 500,
            "salesCount": 500,
            "type": "A",
          },
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "goalProfit": 40,
        "salesCount": 500,
        "type": "A",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "point": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
        "lineWidth": 1,
        "scaleX": 1.4,
        "scaleY": 1.4,
        "stroke": [Function],
      },
    },
    "style": {},
  },
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "scatter",
  "xField": "__MeaXValue__",
  "yField": "__MeaYValue__",
}
`;
